--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <title>Gallery</title>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -22,6 +23,8 @@
   </div>
 
   <div id="gallery" class="gallery"></div>
+
+  <button id="loadMoreButton" style="display: none;">Load more</button>
 
   <script type="module" src="./main.js"></script>
   <script src="simple-lightbox.min.js"></script>
